--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,7 @@
 body {
     font: 400 15px Tahoma, sans-serif;
     line-height: 1.8;
-    color: #818181;
+    color: black;
     background-color: #f6f6f6;
 }
 
