--- a/estilo.css
+++ b/estilo.css
@@ -99,13 +99,13 @@ video {
 /* a=0 b=1 c=1 -> Especificidad = 11 */
 a:link , a:visited{
     padding: 5px;
-    background-color: darkgreen;
-    color: #fff;
+    background-color: black;
+    color: white;
     text-decoration: none;
 }
 /* a=0 b=1 c=1 -> Especificidad = 11 */
 a:hover{
-    border: 2px solid black;
+    border: 3px solid white;
 }
 
 /* a=0 b=0 c=3 -> Especificidad = 3 */
@@ -117,7 +117,7 @@ footer ul li{
 /* a=0 b=1 c=3 -> Especificidad = 13 */
 footer ul li a:link , footer ul li a:visited{
     padding: 5px;
-    background-color: darkgreen;
+    background-color: black;
     color: #fff;
     border: 3px solid black;
 }
